2006-06-21 [paul]	2.3.1cvs5

	* src/messageview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_other.c
		add an option to 'Never send Return
		Receipts'
		Thanks to Colin

2006-06-20 [mones]	2.3.1cvs4

	* po/es.po
		updated
	* src/compose.c
		typo fixed (space after comma)
	* tools/make.themes.project
		remove exec mode from tarball files

2006-06-20 [colin]	2.3.1cvs3

	* src/news.c
	* src/procheader.c
	* src/unmime.c
		Better fix for \n's in headers (don't 
		break Received: and others)

2006-06-20 [paul]	2.3.1cvs2

	* src/alertpanel.c
	* src/textview.c
		improve legibility of phishing attempt
		dialog

2006-06-20 [paul]	2.3.1cvs1

	* NEWS
	* README
	* configure.ac
		Update version number following
		stable release

2006-06-20 [colin]	2.3.0cvs26

	* src/compose.c
		When dragging a file to the text of the compose
		window, ask whether we want to insert or attach
		(I know lots of people who do that to attach)

2006-06-20 [colin]	2.3.0cvs25

	* src/etpan/imap-thread.c
		Fix threshold (the append command is often > 32 bytes)

2006-06-19 [colin]	2.3.0cvs24

	* src/imap.c
	* src/etpan/imap-thread.c
		Workaround Rockliffe IMAP server bug: replace
		"x UID SEARCH (ANSWERED UID 1:*)" with
		"x UID SEARCH ANSWERED"
		(Rockliffe doesn't handle the parenthesis)

2006-06-19 [colin]	2.3.0cvs23

	* src/compose.c
	* src/imap.c
	* src/etpan/imap-thread.c
		Probably fix bug #972 (Freezes when adding 
		an attachment to the message)
	* src/common/defs.h
		Modernize Firefox cmd


2006-06-18 [colin]	2.3.0cvs22

	* src/prefs_customheader.c
		Only allow correct filenames for various
		custom headers

2006-06-18 [colin]	2.3.0cvs21

	* src/prefs_customheader.c
		Add a 'From File...' button in custom headers prefs, which
		try to do the right thing: 
		for normal headers, use file as plaintext,
		for X-Face, calls compface,
		for Face, encode to b64.

2006-06-17 [colin]	2.3.0cvs20

	* src/mh.c
		Warning fix

2006-06-16 [colin]	2.3.0cvs19

	* src/summaryview.c